feat:landing page

--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,8 @@
                     aspernatur odio amet perferendis tempora mollitia? Ratione unde magni omnis quaerat
                     blanditiis cumque dolore placeat rem dignissimos?
                 </p>
+                <p><button type="button" class="inline-block px-6 py-2 border-2 border-gray-800 text-gray-800 font-bold text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out">Leia mais</button></p>
+          
                 </div>
             </div>
         
@@ -202,6 +204,7 @@
               <p>DTI - Diretoria de Tecnologia da Informação - Aparecida de Goiânia / GO</p>
             </div>
           </footer>
+
 
  
   <script src="js/script.js"></script>
